@@ -422,3 +422,4 @@ install (PROGRAMS
 )
 
 add_subdirectory (scripts)
+add_subdirectory (test)
