@@ -19,6 +19,8 @@ vX.Y.X
 - Update PostgreSQL documentation
 - Build CockroachDB support only if PostgreSQL 11+ is available since
   pg_type_c.h is required for binary mode support
+- Fix datagen partitioning logic
+- Add tests to verify datagen partitioning correctness
 
 v0.48.7
 
